<resources>
    <string name="app_name">crypto_app</string>
    <string name="coin_name">%s/ %s</string>
    <string name="coin_update">Время последнего обновления :%s</string>
    <string name="track">/</string>
    <string name="price">Цена:</string>
    <string name="min_day">Минимум за день:</string>
    <string name="max_day">Максимум за день:</string>
    <string name="last_deal">Последняя сделка:</string>
    <string name="update">Обновлено</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo_coin">Logo_coin</string>
</resources>