<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsCoinActivity">

    <ImageView
        android:id="@+id/imageViewCoinDetails"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <LinearLayout
        android:id="@+id/linearLayoutDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewCoinDetails">

        <TextView
            android:id="@+id/textViewFSymbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_purple"
            android:textSize="24sp"
            tools:text="BTH" />

        <TextView
            android:id="@+id/textViewTrack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="@string/track"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textViewToSymbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="24sp"
            tools:text="USD" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutDetails">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/textViewLabelPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/price"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/textViewLabelPrice"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="8888.8" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#63000000"
                app:layout_constraintTop_toBottomOf="@id/textViewLabelPrice" />

            <TextView
                android:id="@+id/textViewLabelMin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/min_day"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewLabelPrice" />

            <TextView
                android:id="@+id/textViewMin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:textColor="@android:color/holo_red_light"
                app:layout_constraintStart_toEndOf="@+id/textViewLabelMin"
                app:layout_constraintTop_toBottomOf="@+id/textViewLabelPrice"
                tools:text="5555.5" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#63000000"
                app:layout_constraintTop_toBottomOf="@id/textViewLabelMin" />

            <TextView
                android:id="@+id/textViewLabelMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/max_day"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewLabelMin" />

            <TextView
                android:id="@+id/textViewMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:textColor="@android:color/holo_green_light"
                app:layout_constraintStart_toEndOf="@+id/textViewLabelMax"
                app:layout_constraintTop_toBottomOf="@+id/textViewLabelMin"
                tools:text="7777.7" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#63000000"
                app:layout_constraintTop_toBottomOf="@id/textViewLabelMax" />

            <TextView
                android:id="@+id/textViewLabelLastDeal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/last_deal"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewLabelMax" />

            <TextView
                android:id="@+id/textViewLastDeal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/textViewLabelLastDeal"
                app:layout_constraintTop_toBottomOf="@+id/textViewLabelMax"
                tools:text="Bitfinex" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#63000000"
                app:layout_constraintTop_toBottomOf="@id/textViewLabelLastDeal" />

            <TextView
                android:id="@+id/textViewLabelLastTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/update"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewLabelLastDeal" />

            <TextView
                android:id="@+id/textViewLastTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/textViewLabelLastTime"
                app:layout_constraintTop_toBottomOf="@+id/textViewLabelLastDeal"
                tools:text="24:24:24" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>